# ProjectManageServer

./: .gitignore  CMakeLists.txt  CMakePresets.txt  README.md
include/: ShareStruct.h
src/ProjectManage_Server/: MananWindow.cpp  MananWindow.h  MananWindow.qrc  MananWindow.ui  ShareStructServer.h  Shareheader.cpp  Shareheader.h  TaskCheckRunnable.cpp  TaskCheckRunnable.h  TcpRunable.cpp  TcpRunable.h  WnTCPServer.cpp  WnTCPServer.h  main.cpp
src/ProjectManage_Server/PublicClass/: SqlQueryEx.cpp  SqlQueryEx.h  WnDebugLog.h  WnDialog.cpp  WnDialog.h  WnLog.cpp  WnLog.h  WnShareData.cpp  WnShareData.h  WnTcpClient.cpp  WnTcpClient.h  WnUdpClient.cpp  WnUdpClient.h
